# nutune

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: main.rs
src/browse/: interactive.rs  mod.rs
src/cli/: auth.rs  commands.rs  mod.rs
src/device/: config.rs  detection.rs  manifest.rs  mod.rs  storage.rs
src/subsonic/: auth.rs  client.rs  mod.rs  models.rs
src/sync/: downloader.rs  engine.rs  mod.rs  pipeline.rs
src/utils/: cover_art.rs  m3u.rs  mod.rs  sanitize.rs  tui_log.rs
