[package]
name = "nutune"
version = "0.1.0"
edition = "2024"
authors = ["Christopher Miller <git@chrismiller.xyz>"]
description = "Sync music from Subsonic to portable devices"
license = "GPL-3.0"
repository = "https://github.com/ChristopherJMiller/nutune"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dialoguer = "0.11"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Progress and UI
indicatif = "0.17"
colored = "2.1"
console = "0.15"

# Interactive TUI
ratatui = "0.29"
crossterm = "0.28"

# Security
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }
md-5 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
futures = "0.3"
async-trait = "0.1"
nix = { version = "0.29", features = ["fs"] }
urlencoding = "2.1"
bytes = "1.9"
dirs = "5.0"

# Audio metadata and cover art
lofty = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
